Thu Jun 22 23:49:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now thumbnails show as they load too.
	* AND :-)
	* Thumbnail hiliting on mouseover from richlowe. Coolio ;-)

Thu Jun 22 23:32:45 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Same for collage mode :)

Thu Jun 22 23:28:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Woop. Something I should've done a WHILE ago. If progressive
	loading is enabled (ie not -P), you can see the index/montage
	being created in front of your eyes ;-) It's sweet.
	* Next I will make it respond to events during the creation
	(quiting/zooming while still creating), and make it work for
	thumbnail and collage modes too.

Thu Jun 22 22:23:48 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fix for trying to reload a montage
	* Rewrite of all linked-list code to a more generic form so I can
	do more with it. I may have introduced bugs in this (big) rewrite,
	so test test test ;-)
	* Misc fixups

Wed Jun 21 23:49:00 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Can set background from multiwindow and thumbnail modes now.

Wed Jun 21 22:43:37 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Initial thumbnail mode, thanks to patches from richlowe and
	modifications by me. Nice work dude. More to come, right now
	there's just the click (although it works with a panned or zoomed
	thumbnail list). To come - opening thumbs in a single window,
	hiliting, and hey, the rest will be a surprise, okay? ;-)
	* This is *initial* btw. I plan to properly add this to index and
	montage modes, as it needn't be a seperate mode. There's lots of
	duplication in the source right now, which needs to be cut down.

Tue Jun 20 20:02:57 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed mousebutton swapping option code. It was broken for
	certain combinations, now all seems well.
	* Found a use for ctrl+button1 for now, it just blurs/sharpens the
	image dynamically - for shits and giggles. It is somewhat spoiled