@@ -1,3 +1,10 @@
+Thu Jun 22 23:57:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Optimisations to thumb hilites. Only show hilite when you can
+	click to open an image, don't show when over emtpy space, and 
+	don't re-render if the selection hasn't changed from the last
+	mouseover. Speeds it up a lot.
+
 Thu Jun 22 23:49:07 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Now thumbnails show as they load too.
